--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="row">
         <div class="copyright pt-5 col-12 text-center">
           <p class="sans">
-            <i class="far fa-copyright"></i> Desarrollado por Adriana Reyes
+            © Desarrollado por Adriana Reyes
           </p>
         </div>
       </div>
