added santocafeto.html, about.html and changed collab button

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <!-- Animations -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-  <title>adriGraphics | Portfolio</title>
+  <title>adriGraphics | About</title>
 </head>
 
 <body>
@@ -27,44 +27,14 @@
   <div class="top-white-space"></div>
   <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
-      <a class="navbar-brand col-8" href="#">
+      <a class="navbar-brand col-8" href="index.html">
         <h3 class="fw-bolder pt-1">aG portfolio.</h3>
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse col-4" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#intro">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#galeria">Galería</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#footer">Contacto</a>
-          </li>
-        </ul>
-      </div>
     </div>
   </nav>
 
   <!---===BODY===-->
-
-  <!--HERO-->
-
   <div class="container-fluid">
-
-    <div id="hero" class="row">
-      <div class="d-flex justify-content-center align-items-center">
-        <h1 class="title text-center">adriGraphics</h1>
-      </div>
-    </div>
-
 
     <!--INTRO-->
 
@@ -82,101 +52,16 @@
         <p class="text-justify">Estos son algunos de mis trabajos en fotografía. Haz click en una foto para ver más de
           esa sesión.</p>
       </div>
-      <h5 class="pt-5 fw-bolder">Sesiones Fotográficas <i class="fas fa-camera-retro"></i></h5>
+      
     </div>
 
 
 
     <!--GALLERY-->
 
-    <div id="galeria" class="row px-lg-5 px-md-5 margen">
+    <div id="galeria" class="row px-lg-5 px-md-5 img-margen">
 
-      <!--IMG1-->
-      <a href="santocafeto.html" class="project col-12 col-md-6 col-xl-4">
-
-        <div clas="row">
-
-          <div class="img img-1 col-12">
-          </div>
-
-          <h4 class="title col-12 fw-bolder">Santo Cafeto</h4>
-          <p class="detail col-12">Café en Tijuana</p>
-        </div>
-
-      </a>
-
-      <!--IMG2-->
-      <a href="https://www.adrigraphics.com/rabiacafe.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
-
-        <div clas="row">
-
-          <div class="img img-2 col-12">
-          </div>
-
-          <h4 class="title col-12 fw-bolder">Rabia Café</h4>
-          <p class="detail col-12">Café en Tijuana</p>
-        </div>
-
-      </a>
-
-      <!--IMG3-->
-      <a href="https://www.adrigraphics.com/cafetodemathieu.html" target="_blank"
-        class="project col-12 col-md-6 col-xl-4">
-
-        <div clas="row">
-
-          <div class="img img-3 col-12">
-          </div>
-
-          <h4 class="title col-12 fw-bolder">Cafeto de Mathieu</h4>
-          <p class="detail col-12">Café en Tijuana</p>
-        </div>
-
-      </a>
-
-      <!--IMG4-->
-      <a href="https://www.adrigraphics.com/lexdon.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
-
-        <div clas="row">
-
-          <div class="img img-4 col-12">
-          </div>
-
-          <h4 class="title col-12 fw-bolder">Lexdon</h4>
-          <p class="detail col-12">Retrato</p>
-        </div>
-
-      </a>
-
-      <!--IMG5-->
-      <a href="https://www.adrigraphics.com/gyj.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
-
-        <div clas="row">
-
-          <div class="img img-5 col-12">
-          </div>
-
-          <h4 class="title col-12 fw-bolder">GyJ Distribuidora</h4>
-          <p class="detail col-12">Flores y Follajes</p>
-        </div>
-
-      </a>
-
-      <!--IMG6-->
-      <a href="https://www.adrigraphics.com/28s.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
-
-        <div clas="row">
-
-          <div class="img img-6 col-12">
-          </div>
-
-          <h4 class="title col-12 fw-bolder">28S 2020</h4>
-          <p class="detail col-12">Foto Documental</p>
-        </div>
-
-      </a>
-
-
+      
 
     </div>
 
@@ -213,9 +98,11 @@
 
   </div>
 
+  
+
 
   <!--STICKY COLLAB BTN-->
-  <a class="mail fixed-bottom text-center" href="https://wa.me/526643109337" target="_blank">Interesadx en colaborar? Envíame un mensaje por WhatsApp! <i class="fab fa-whatsapp"></i></a>
+  <a href="index.html" class="sticky-btn boton">Volver al inicio</a>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
