changed animation to navbar and container

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!--========NAVBAR========-->
   <div class="top-white-space"></div>
   <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container-fluid">
+    <div class="container-fluid fadeinup">
       <a class="navbar-brand col-8" href="#">
         <h3 class="fw-bolder pt-1">aG portfolio.</h3>
       </a>
@@ -57,7 +57,7 @@
 
   <!--HERO-->
 
-  <div class="container-fluid">
+  <div class="container-fluid fadein">
 
     <div id="hero" class="row">
       <div class="d-flex justify-content-center align-items-center">
