--- a/santocafeto.html
+++ b/santocafeto.html
@@ -26,7 +26,7 @@
   <!--========NAVBAR========-->
   <div class="top-white-space"></div>
   <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container-fluid fadeinup">
+    <div class="container-fluid fadeindown">
       <a class="navbar-brand col-8" href="index.html">
         <h3 class="fw-bolder pt-1">aG portfolio.</h3>
       </a>
