changed shakeX for heartBeat in back button

--- a/santocafeto.html
+++ b/santocafeto.html
@@ -136,7 +136,7 @@
 
 
   <!--STICKY COLLAB BTN-->
-  <a href="index.html" class="sticky-btn boton">Volver al inicio</a>
+  <a href="index.html" class="sticky-btn boton heartbeat">Volver al inicio</a>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
