edited collab buton

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
   <!--STICKY COLLAB BTN-->
-  <a class="mail fixed-bottom text-center" href="https://wa.me/526643109337" target="_blank">Interesadx en colaborar? Envíame un mensaje por WhatsApp! <i class="fab fa-whatsapp"></i></a>
+  <a class="collab fixed-bottom text-center heartbeat" href="https://wa.me/526643109337" target="_blank">Interesadx en colaborar? Contáctame! <i class="fab fa-whatsapp"></i></a>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
