added the rest of photos

--- a/santocafeto.html
+++ b/santocafeto.html
@@ -31,7 +31,7 @@
         <h3 class="fw-bolder pt-1">aG portfolio.</h3>
       </a>
 
-        <a class="boton" type="button" href="about.html">+</a>
+      <a class="boton" type="button" href="about.html">+</a>
 
     </div>
   </nav>
@@ -55,46 +55,80 @@
 
     <!--GALLERY-->
 
-    <div id="galeria" class="row px-lg-5 px-md-5 img-margen">
+    <div id="galeria" class="row px-lg-5 px-md-5 foto-margen">
 
-      <!--IMG1-->
+      <!--FOTO1-->
       <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
         <div class="foto sc1">
         </div>
       </div>
 
-      <!--IMG2-->
+      <!--FOTO2-->
       <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
         <div class="foto sc2">
         </div>
       </div>
 
-      <!--IMG3-->
+      <!--FOTO3-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc3">
+        </div>
+      </div>
 
 
-      <!--IMG4-->
+      <!--FOTO4-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc4">
+        </div>
+      </div>
 
+      <!--FOTO5-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc5">
+        </div>
+      </div>
 
-      <!--IMG5-->
+      <!--FOTO6-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc6">
+        </div>
+      </div>
 
+      <!--FOTO7-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc7">
+        </div>
+      </div>
 
-      <!--IMG6-->
+      <!--FOTO8-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc8">
+        </div>
+      </div>
 
+      <!--FOTO9-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc9">
+        </div>
+      </div>
 
-      <!--IMG8-->
+      <!--FOTO10-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc10">
+        </div>
+      </div>
 
+      <!--FOTO11-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc11">
+        </div>
+      </div>
 
-      <!--IMG9-->
-
-
-      <!--IMG10-->
-
-
-      <!--IMG11-->
-
-
-      <!--IMG12-->
-
+      <!--FOTO12-->
+      <div class="pt-3 col-sm-12 col-md-6 col-xl-4">
+        <div class="foto sc12">
+        </div>
+      </div>
 
 
     </div>
@@ -132,7 +166,7 @@
 
   </div>
 
-  
+
 
 
   <!--STICKY COLLAB BTN-->
