added the photos of the rest of the photoshoots

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </a>
 
       <!--IMG2-->
-      <a href="https://www.adrigraphics.com/rabiacafe.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
+      <a href="rabiacafe.html" class="project col-12 col-md-6 col-xl-4">
 
         <div clas="row">
 
@@ -120,7 +120,7 @@
       </a>
 
       <!--IMG3-->
-      <a href="https://www.adrigraphics.com/cafetodemathieu.html" target="_blank"
+      <a href="cafetodemathieu.html"
         class="project col-12 col-md-6 col-xl-4">
 
         <div clas="row">
@@ -135,7 +135,7 @@
       </a>
 
       <!--IMG4-->
-      <a href="https://www.adrigraphics.com/lexdon.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
+      <a href="lexdon.html" class="project col-12 col-md-6 col-xl-4">
 
         <div clas="row">
 
@@ -149,7 +149,7 @@
       </a>
 
       <!--IMG5-->
-      <a href="https://www.adrigraphics.com/gyj.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
+      <a href="gyj.html" class="project col-12 col-md-6 col-xl-4">
 
         <div clas="row">
 
@@ -163,7 +163,7 @@
       </a>
 
       <!--IMG6-->
-      <a href="https://www.adrigraphics.com/28s.html" target="_blank" class="project col-12 col-md-6 col-xl-4">
+      <a href="28s.html" class="project col-12 col-md-6 col-xl-4">
 
         <div clas="row">
 
