moved footer buttom

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
 
     </div>
 
+<!--STICKY COLLAB BTN-->
+<div class="row">
+  <a class="collab col-12 text-center heartbeat" href="https://wa.me/526643109337" target="_blank">Interesadx en colaborar? Contáctame! <i class="fab fa-whatsapp"></i></a>
+  </div>
 
     <!--FOOTER-->
 
@@ -220,10 +224,6 @@
     </footer>
 
   </div>
-
-
-  <!--STICKY COLLAB BTN-->
-  <a class="collab fixed-bottom text-center heartbeat" href="https://wa.me/526643109337" target="_blank">Interesadx en colaborar? Contáctame! <i class="fab fa-whatsapp"></i></a>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
